pa10/tests/type_error/cond_mismatch.uC
int main() {
	int a;
	float b;
	a = 1;
	b = 2.0;
	if (a < b) {
		a = 0;
	}
	return 0;
}
